fix: alignment of checkerboard, XS disabled icon size

--- a/components/swatch/index.css
+++ b/components/swatch/index.css
@@ -21,7 +21,7 @@ governing permissions and limitations under the License.
   --spectrum-swatch-size-m: var(--spectrum-global-dimension-size-400);
   --spectrum-swatch-size-l: var(--spectrum-global-dimension-size-500);
 
-  --spectrum-swatch-disabled-icon-size-xs: var(--spectrum-global-dimension-size-150);
+  --spectrum-swatch-disabled-icon-size-xs: var(--spectrum-global-dimension-size-175);
   --spectrum-swatch-disabled-icon-size-s: var(--spectrum-global-dimension-size-200);
   --spectrum-swatch-disabled-icon-size-m: var(--spectrum-global-dimension-size-225);
   --spectrum-swatch-disabled-icon-size-l: var(--spectrum-global-dimension-size-250);
@@ -37,7 +37,7 @@ governing permissions and limitations under the License.
   --spectrum-swatch-fill-border-width: var(--spectrum-alias-border-size-thin);
   --spectrum-swatch-fill-border-color: rgba(44, 44, 44, 0.51); /* todo: use -rgb suffixed color when pr merged */
 
-  --spectrum-swatch-background-offset: -1px; /* align checkerboard center */
+  --spectrum-swatch-background-offset: 0px;
   --spectrum-swatch-checkerboard-size: var(--spectrum-global-dimension-static-size-100);
 
   display: flex;
